fix: update simulator version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
           xcodebuild test \
             -project StockFort.xcodeproj \
             -scheme StockFortTests \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+            -destination 'platform=iOS Simulator,OS=latest,name="iPhone SE (3rd generation)"' \
             -only-testing:StockFortTests \
             CODE_SIGNING_ALLOWED=NO
